# DBMS

./: .env  .gitignore  .replit  README.md  gacha_inventory.json  package-lock.json  package.json  points_data.json  replit.nix  requirements.txt
DBMS/: .gitignore  commands.py  listener.js  main.py  pyproject.toml  requirements.txt  setup.sh  stt.py  stt_test.py
DBMS/AI/: discord_ai_wrapper.py  free_reading_ai.py  reading.py  setup.py
DBMS/DBMS/: keep_alive.py  main.py  replit.md
bot/: leave_watcher.js  listener.js
pybot/: audio_actions.py  commands.py  gacha_commands.py  gacha_inventory.json  main.py  stt.py  stt_result.txt  utils.py  voice_listener.py
pybot/commands/: music_commands.py  voice_commands.py
pybot/discord_commands/: admin_commands.py  battle_commands.py  fun_commands.py  gacha_commands.py  music_commands.py  points_data.json  prestige_commands.py  quiz_commands.py  voice_commands.py
pybot/discord_commands/data/: active_units.json  boss_data.json  gacha_inventory.json  points_data.json  prestige_data.json
